--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "adonis-fullstack-app",
-  "version": "4.1.0",
+  "name": "pete-server",
+  "version": "0.1.0",
   "adonis-version": "4.1.0",
-  "description": "The fullstack application boilerplate for Adonisjs",
+  "description": "The HTTP server to manage Pete",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
     "test": "node ace test"
   },
   "keywords": [
-    "adonisjs",
-    "adonis-app"
+    "torrents",
+    "bitorrent"
   ],
-  "author": "",
-  "license": "UNLICENSED",
-  "private": true,
+  "author": "Grant Holle <http://grantholle.com>",
+  "license": "MIT",
+  "private": false,
   "dependencies": {
     "@adonisjs/ace": "^5.0.8",
     "@adonisjs/auth": "^3.0.7",
@@ -25,7 +25,8 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.0.27",
-    "@adonisjs/shield": "^1.0.8"
+    "@adonisjs/shield": "^1.0.8",
+    "sqlite3": "^4.0.8"
   },
   "devDependencies": {},
   "autoload": {
