--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,7 @@
 HOST=127.0.0.1
 PORT=4000
 NODE_ENV=testing
+DB_CONNECTION=sqlite
 
 TMDB_KEY=d75a7f2cb4531e76ef681a3697dae4c7
 TMDB_SESSION=096798bc29df003aa3ef3208f1f241a60edf181e
