--- a/package.json
+++ b/package.json
@@ -36,8 +36,12 @@
     "@adonisjs/validator": "^5.0.6",
     "@adonisjs/vow": "^1.0.17",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "moviedb-promise": "^1.3.2",
-    "sqlite3": "^4.0.8"
+    "rarbg": "^1.2.7",
+    "sanitize-filename": "^1.6.1",
+    "sqlite3": "^4.0.8",
+    "yify-search": "^1.0.0"
   },
   "devDependencies": {},
   "autoload": {
