--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/validator": "^5.0.6",
     "@adonisjs/vow": "^1.0.17",
+    "eztv-b": "^1.1.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "moviedb-promise": "^1.3.2",
