--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "moviedb-promise": "^1.3.2",
+    "parse-torrent": "^6.1.2",
     "rarbg": "^1.2.7",
     "sanitize-filename": "^1.6.1",
     "sqlite3": "^4.0.8",
