--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "moviedb-promise": "^1.3.2",
-    "parse-torrent": "^6.1.2",
+    "pushbullet": "^2.4.0",
     "rarbg": "^1.2.7",
     "sanitize-filename": "^1.6.1",
     "sqlite3": "^4.0.8",
+    "transmission-promise": "^1.1.2",
     "yify-search": "^1.0.0"
   },
   "devDependencies": {},
