--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "node ace test"
+    "test": "node ace test",
+    "dev": "cross-env NODE_ENV=development ./node_modules/.bin/webpack --config webpack.config.js --watch",
+    "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --config webpack.config.js"
   },
   "keywords": [
     "movies",
@@ -46,7 +48,21 @@
     "transmission-promise": "^1.1.2",
     "yify-promise": "^1.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "autoprefixer": "^9.6.1",
+    "cross-env": "^5.2.0",
+    "css-loader": "^3.1.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.1.2",
+    "style-loader": "^0.23.1",
+    "svelte": "^3.6.7",
+    "svelte-loader": "^2.13.5",
+    "tailwindcss": "^1.0.5",
+    "webpack": "^4.36.1",
+    "webpack-cli": "^3.3.6"
+  },
   "autoload": {
     "App": "./app"
   }
