--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.6.1",
+    "axios": "^0.19.0",
     "cross-env": "^5.2.0",
     "css-loader": "^3.1.0",
     "mini-css-extract-plugin": "^0.8.0",
