--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "yify-promise": "^1.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/custom-forms": "^0.2.0",
     "autoprefixer": "^9.6.1",
     "axios": "^0.19.0",
     "cross-env": "^5.2.0",
