--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/validator": "^5.0.6",
     "@adonisjs/vow": "^1.0.17",
+    "@adonisjs/websocket": "^1.0.11",
+    "@adonisjs/websocket-client": "^1.0.9",
     "eztv-b": "^1.1.1",
     "lodash": "^4.17.14",
     "moment": "^2.24.0",
     "moviedb-promise": "^1.3.2",
+    "nanoid": "^2.0.3",
     "pushbullet": "^2.4.0",
     "rarbg": "^1.2.7",
     "sanitize-filename": "^1.6.1",
@@ -49,15 +52,20 @@
     "yify-promise": "^1.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-regenerator": "^7.4.5",
     "@tailwindcss/custom-forms": "^0.2.0",
     "autoprefixer": "^9.6.1",
     "axios": "^0.19.0",
+    "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
     "cross-env": "^5.2.0",
     "css-loader": "^3.1.0",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.2",
+    "regenerator-runtime": "^0.13.3",
     "style-loader": "^0.23.1",
     "svelte": "^3.6.7",
     "svelte-loader": "^2.13.5",
