--- a/package.json
+++ b/package.json
@@ -77,5 +77,9 @@
   },
   "autoload": {
     "App": "./app"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/grantholle/pete-server"
   }
 }
