--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "pete-server",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "adonis-version": "4.1.0",
   "description": "The HTTP server to manage Pete",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "./node_modules/.bin/pm2 start pete.config.js",
+    "stop": "./node_modules/.bin/pm2 stop pete.config.js",
+    "restart": "./node_modules/.bin/pm2 restart pete.config.js",
+    "scheduler": "node ace run:scheduler",
     "test": "node ace test",
     "dev": "cross-env NODE_ENV=development ./node_modules/.bin/webpack --config webpack.config.js --watch",
     "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --config webpack.config.js"
@@ -45,6 +48,7 @@
     "moment": "^2.24.0",
     "moviedb-promise": "^1.3.2",
     "nanoid": "^2.0.3",
+    "pm2": "^3.5.1",
     "pushbullet": "^2.4.0",
     "rarbg": "^1.2.7",
     "sanitize-filename": "^1.6.1",
