--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "moment": "^2.24.0",
     "moviedb-promise": "^1.3.2",
     "nanoid": "^2.0.3",
+    "parse-torrent-title": "^1.2.0",
     "pm2": "^3.5.1",
     "pushbullet": "^2.4.0",
     "rarbg": "^1.2.7",
